deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOY_NAME}
spec:
  replicas: 2
  selector:
    matchLabels:
      service: ${DEPLOY_NAME}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        service: ${DEPLOY_NAME}
    spec:
      containers:
      - name: app
        image: ${IMAGE_NAME}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
         limits:
           cpu: 500m
         requests:
           cpu: 200m
