ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${DEPLOY_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.blue-green: |
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"${DEPLOY_NAME}-service",
              "servicePort":"80",
              "weight":100
            }
          ]
        }
      }
  labels:
    service: ${DEPLOY_NAME}-service
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${DEPLOY_NAME}-service
                port:
                  name: use-annotation
